获取购物车列表

--- a/src/main/resources/file.properties
+++ b/src/main/resources/file.properties
@@ -1,4 +1,4 @@
 file.endpoint=oss-cn-beijing.aliyuncs.com
 file.bucketName=shop-online-cg
 file.objectName=avatar/
-file.ossHost=https://shop-online-cg.oss-cn-beijing.aliyuncs.com
+file.ossHost=https://shop-online-cg.oss-cn-beijing.aliyuncs.com/
